fixed alignment bugs

--- a/custom.css
+++ b/custom.css
@@ -342,7 +342,7 @@ body {
 		height: 220px;
 	}
 	#tricks {
-		height: 182px;
+		height: 160px;
 		width: 210px;
 		margin: auto;
 		width: 100%;
@@ -356,9 +356,10 @@ body {
 		height: 95px;
 	}
 	.footer {
-		height: 302px;
+		height: 332px;
 		background-color: #333;
 		color: white;
+		padding: 10px 0;
 	}
 	.footer .row {
 		height: 250px;
